ruby-app-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: adjust-ruby-app
  labels:
    app: adjust-ruby-app
    tier: web
    environment: production 
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: adjust-ruby-app
    tier: web
    environment: production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adjust-ruby-app
spec:
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 0
  selector:
    matchLabels:
      app: adjust-ruby-app
      tier: web
      environment: production 
  template:
    metadata:
      labels:
        app: adjust-ruby-app
        tier: web
        environment: production
    spec:
      containers:
      - name: adjust-ruby-app
        image: adjust-ruby-app:v1     
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 25Mi
          limits:
            memory: 50Mi
            cpu: 50m 
        ports:
        - containerPort: 80
        readinessProbe:
         httpGet:
          path: /healthcheck
          port: 80
         initialDelaySeconds: 2
         periodSeconds: 5
         successThreshold: 1
         failureThreshold: 2
         timeoutSeconds: 2     
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adjust-ruby-app
spec:
  rules:
  - host: ruby-app.adjust.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: adjust-ruby-app
            port:
              number: 80
